@@ -40,6 +40,7 @@ Tickets:
 	- Fixed #1065: Bug - Unable to unsuspend customer account from admin UI
 	- Fixed #1066: Bug - Customer's domains remain reachable through HTTPS when they are deactivated
 	- Fixed #1075: Bug - mysqldump: Can't create/write to file
+	- Fixed #1078: Defect - Defect - Table 'mysql.host' is not longer provided with MySQL >= 5.6.7
 
 ------------------------------------------------------------------------------------------------------------------------
 1.1.5
